Tweak intro and COVID statement

--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -674,9 +674,7 @@ The LDP standard is reported in two parts, each addressing a separate element to
 1.	The percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support.
 2.	The percentage of people referred for dementia post-diagnostic support who received a minimum of one year’s support.
 
-NHS Boards provide quarterly data submissions to PHS on individuals diagnosed and referred for post-diagnostic support within their local areas and this dataset forms the basis of the LDP standard calculation. 
-
-<br>
+NHS Boards provide quarterly data submissions to PHS on individuals diagnosed with dementia and referred for post-diagnostic support within their local areas and this dataset forms the basis of the LDP standard calculation. 
 
 ## Impact of COVID-19 on provision of dementia post-diagnostic support
 
@@ -688,11 +686,7 @@ Commitment 4 of the national action plan states:
 
 “We will continue to support our national commitment on post-diagnostic support, to increase access to this service and to the community support individuals need to continue living well as part of the wider community. As part of this, in partnership with COSLA, local partnerships, Alzheimer Scotland and other stakeholders we will take forward work in the first four months of 2021 to review and assess the provision and design of post-diagnostic services and identify both best practice and barriers to further expansion of the service. We will also establish a process to engage regularly with local delivery partners to assess progress and identify and help address local issues.”
 
-*Refine this - * Due to the pandemic some areas have reported difficulties in updating their data systems in relation to the dementia PDS dataset. Figures relating to 2018/19 are published as provisional due to incomplete data and to allow all service users to complete their support.
-
-*Mention Alz Scot [hidden impact report](https://www.alzscot.org/sites/default/files/2020-12/Coronavirus%20the%20hidden%20impact%20report%20final.pdf) here?*
-
-Further information around data quality can be found in [Appendix 1](#data-quality).
+*Mention Alz Scot [hidden impact report](https://www.alzscot.org/sites/default/files/2020-12/Coronavirus%20the%20hidden%20impact%20report%20final.pdf) here*
 
 \newpage
 
@@ -1265,6 +1259,8 @@ For a relatively small number of individuals, multiple records were submitted an
 3.	Keep record with earliest first contact date.
 
 There also exists a Service Level Agreement between NHS Highland and NHS Greater Glasgow & Clyde health boards, where some PDS is provided to Argyll & Bute residents by West Dunbartonshire IJB. The support provided to these service users has been apportioned to NHS Highland in this report, as part of the LDP Standard is a population based measure, and so by not including these Argyll & Bute residents this figure may be skewed.
+
+As a result of the COVID-19 pandemic, some areas have reported difficulties in updating their data systems which are required to provide the dementia PDS dataset.
 
 \newpage
 
